--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(top_winery.png);
   background-size: cover;
-  color: #5f5d60;
+  color: black;
   text-align: center;
 }
 
