--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,9 +33,9 @@ a {
 
 .top-wrapper p {
   opacity: 0.7;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 40px;
-  color: #55acee;
+  color: white;
 }
 
 .btn-wrapper {
