--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,12 +86,6 @@ header {
   z-index: 10;
 }
 
-.logo {
-  width: 260px;
-  margin-top: auto 0;
-  line-height: 65px;
-}
-
 .header-left {
   float: left;
 }
@@ -102,6 +96,10 @@ header {
   display: block;
   float: left;
   transition: all 0.5s;
+}
+
+.header-left a:hover {
+  background-color: rgba(255,255,255,0.3);
 }
 
 .header-right {
