--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,11 +32,11 @@ a {
 }
 
 .top-wrapper p {
-  opacity: 1;
-  font-size: 20px;
+  opacity: 0.7;
+  font-size: 16px;
   margin-bottom: 40px;
   color: #c71585;
-  font-weight: bold;
+  background-color: snow;
 }
 
 .btn-wrapper {
