--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,8 +37,8 @@ a {
   margin-bottom: 40px;
   color: #c71585;
   background-color: snow;
+  border-radius: 4px;
   padding: 8px 24px;
-  display: inline-block;
 }
 .top-wrapper p {
   opacity: 0.7;
@@ -46,8 +46,8 @@ a {
   margin-bottom: 40px;
   color: #c71585;
   background-color: snow;
+  border-radius: 4px;
   padding: 8px 24px;
-  display: inline-block;
 }
 
 .btn-wrapper {
